--- a/Artix/.startpage-master/src/index.html
+++ b/Artix/.startpage-master/src/index.html
@@ -22,10 +22,11 @@
     <div class="media container">
       <div class="links">
         <div class="media header">Media</div>
-        <a href="https://twist.moe/">Anime</a>
+        <a href="https://lite.animevibe.wtf/">Anime</a>
         <a href="https://www.youtube.com/">Youtube</a>
         <a href="https:/netflix.com/">Netflix</a>
 	<a href="https://pixiv.net/en/">Pixiv</a>
+	<a href="https://listen.moe/">Listen.moe</a>
 
       </div>
 
@@ -50,7 +51,7 @@
       </div>
 
     </div>
-    <img src="./assets/bg.png" alt="">
+    <img src="./assets/noellemonade-idk.jpeg" alt="">
   </div>
 </body>
 </html>
