--- a/.startpage-master/src/index.html
+++ b/.startpage-master/src/index.html
@@ -9,26 +9,14 @@
 <body>
 
   <div class="card-container">
-    <div class="school container">
-      <div class="links">
-        <div class="school header">School</div>
-        <a href="https://classes.brilliantpala.org">Brilliant</a>
-        <a href="https://onedrive.live.com/">OneDrive</a>
-        <a href="https://teams.microsoft.com/">Teams </a>
-        <a href="https://www.jeebrilliantpalaexams.com/">Exams</a>
-      </div>
-
-    </div>
     <div class="media container">
       <div class="links">
         <div class="media header">Media</div>
-        <a href="https://lite.animevibe.wtf/">Anime</a>
         <a href="https://www.youtube.com/">Youtube</a>
         <a href="https:/netflix.com/">Netflix</a>
         <a href="https://twitch.com/">Twitch</a>
 	<a href="https://pixiv.net/en/">Pixiv</a>
 	<a href="https://open.spotify.com/">Spotify</a>
-
       </div>
 
     </div>
@@ -37,9 +25,8 @@
         <div class="news header">Personal</div>
         <a href="https://drive.google.com/">Drive</a>
         <a href="https://mail.google.com/">Gmail</a>
-        <a href="https://web.whatsapp.com/">WhatsApp</a>
-        <a href="https://www.instagram.com/">Instagram</a>
         <a href="https://www.discord.com/channels/@me">Discord</a>
+        <a href="https://classes.brilliantpala.org/">Brilliant</a>
       </div>
 
     </div>
@@ -48,12 +35,10 @@
         <div class="other header">Other</div>
         <a href="https://www.reddit.com/">Reddit</a>
         <a href="https://github.com/">Github</a>
-        <a href="https://twitter.com/">Twitter</a>
-        <a href="https://myanimelist.net/">MyAnimeList</a>
       </div>
 
     </div>
-    <img src="./assets/matsuda-hikari3.jpeg" alt="">
+    <img src="./assets/ayaya.jpg" alt="">
   </div>
 </body>
 </html>
